--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   author={Garg, Ashi and Cai, Zexin and Zhang, Lin and Xinyuan, Henry Li and Garc{\'\i}a-Perera, Leibny Paola and Duh, Kevin and Khudanpur, Sanjeev and Wiesner, Matthew and Andrews, Nicholas},
   journal={arXiv preprint arXiv:2502.05674},
   year={2025}
+  selected={true}
 }
 
 @article{garg2025rapidly,
@@ -15,4 +16,5 @@
   author={Garg, Ashi and Cai, Zexin and Xinyuan, Henry Li and Garc{\'\i}a-Perera, Leibny Paola and Duh, Kevin and Khudanpur, Sanjeev and Wiesner, Matthew and Andrews, Nicholas},
   journal={arXiv preprint arXiv:2508.13320},
   year={2025}
+  selected={true}
 }
